{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 1667,
  "lineage": "471b1720-787b-ec59-687d-1009162a186d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "controller",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09d946db9bd506588",
            "arn": "arn:aws:ec2:il-central-1:912466608750:instance/i-0fa768389b07a21b1",
            "associate_public_ip_address": true,
            "availability_zone": "il-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fa768389b07a21b1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "k8s-kubeadm-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "enabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ea7b3a087679d14c",
            "private_dns": "ip-10-0-1-10.il-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.10",
            "public_ip": "51.17.101.250",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a576cdbeb0de7115",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-045fe3e9f6a01d3d3"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09b1d364f429618b4",
            "tags": {
              "Name": "k8s-kubeadm-controller-0"
            },
            "tags_all": {
              "Name": "k8s-kubeadm-controller-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-045fe3e9f6a01d3d3"
            ]
          },
          "dependencies": [
            "aws_key_pair.key_pair",
            "aws_security_group.main",
            "aws_subnet.main",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "tls_private_key.tls_private_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09d946db9bd506588",
            "arn": "arn:aws:ec2:il-central-1:912466608750:instance/i-02709abe2da9f0da0",
            "associate_public_ip_address": true,
            "availability_zone": "il-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02709abe2da9f0da0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "k8s-kubeadm-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "enabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c1c297ee450d6a18",
            "private_dns": "ip-10-0-1-100.il-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.100",
            "public_ip": "51.17.21.153",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b06186cbd889580c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-045fe3e9f6a01d3d3"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09b1d364f429618b4",
            "tags": {
              "Name": "k8s-kubeadm-worker-0"
            },
            "tags_all": {
              "Name": "k8s-kubeadm-worker-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-045fe3e9f6a01d3d3"
            ]
          },
          "dependencies": [
            "aws_key_pair.key_pair",
            "aws_security_group.main",
            "aws_subnet.main",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "tls_private_key.tls_private_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:912466608750:internet-gateway/igw-0018fe3ee90d96fd2",
            "id": "igw-0018fe3ee90d96fd2",
            "owner_id": "912466608750",
            "tags": {
              "Name": "k8s-kubeadm-igw"
            },
            "tags_all": {
              "Name": "k8s-kubeadm-igw"
            },
            "vpc_id": "vpc-0e294875ae56cb4e0"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:il-central-1:912466608750:loadbalancer/net/k8s-kubeadm-nlb/4525946d71bd891f",
            "arn_suffix": "net/k8s-kubeadm-nlb/4525946d71bd891f",
            "dns_name": "k8s-kubeadm-nlb-4525946d71bd891f.elb.il-central-1.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:il-central-1:912466608750:loadbalancer/net/k8s-kubeadm-nlb/4525946d71bd891f",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "k8s-kubeadm-nlb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-09b1d364f429618b4"
              }
            ],
            "subnets": [
              "subnet-09b1d364f429618b4"
            ],
            "tags": {
              "Name": "k8s-kubeadm-nlb"
            },
            "tags_all": {
              "Name": "k8s-kubeadm-nlb"
            },
            "vpc_id": "vpc-0e294875ae56cb4e0",
            "zone_id": "Z0313266YDI6ZRHTGQY4"
          },
          "dependencies": [
            "aws_subnet.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:il-central-1:912466608750:listener/net/k8s-kubeadm-nlb/4525946d71bd891f/473ffc4f8ba9ba5d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:il-central-1:912466608750:targetgroup/k8s-kubeadm-tg/be40c7ae596639be",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:il-central-1:912466608750:listener/net/k8s-kubeadm-nlb/4525946d71bd891f/473ffc4f8ba9ba5d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:il-central-1:912466608750:loadbalancer/net/k8s-kubeadm-nlb/4525946d71bd891f",
            "mutual_authentication": [],
            "port": 6443,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.main",
            "aws_subnet.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:il-central-1:912466608750:targetgroup/k8s-kubeadm-tg/be40c7ae596639be",
            "arn_suffix": "targetgroup/k8s-kubeadm-tg/be40c7ae596639be",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "6443",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:il-central-1:912466608750:targetgroup/k8s-kubeadm-tg/be40c7ae596639be",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "k8s-kubeadm-tg",
            "port": 6443,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "k8s-kubeadm-tg"
            },
            "tags_all": {
              "Name": "k8s-kubeadm-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e294875ae56cb4e0"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-097a9f4870a4c6e6b",
            "original_route_table_id": "rtb-0e3ba902a614a3b6f",
            "route_table_id": "rtb-0b2bbbe8e3b846f4b",
            "vpc_id": "vpc-0e294875ae56cb4e0"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:912466608750:route-table/rtb-0b2bbbe8e3b846f4b",
            "id": "rtb-0b2bbbe8e3b846f4b",
            "owner_id": "912466608750",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0018fe3ee90d96fd2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "k8s-kubeadm-rt"
            },
            "tags_all": {
              "Name": "k8s-kubeadm-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e294875ae56cb4e0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:912466608750:security-group/sg-045fe3e9f6a01d3d3",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-045fe3e9f6a01d3d3",
            "ingress": [],
            "name": "terraform-20241014091222155000000001",
            "name_prefix": "terraform-",
            "owner_id": "912466608750",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "k8s-kubeadm-sg"
            },
            "tags_all": {
              "Name": "k8s-kubeadm-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e294875ae56cb4e0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:912466608750:subnet/subnet-09b1d364f429618b4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "il-central-1a",
            "availability_zone_id": "ilc1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09b1d364f429618b4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "912466608750",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "k8s-kubeadm-subnet"
            },
            "tags_all": {
              "Name": "k8s-kubeadm-subnet"
            },
            "vpc_id": "vpc-0e294875ae56cb4e0"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:912466608750:vpc/vpc-0e294875ae56cb4e0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0940d1964176166e4",
            "default_route_table_id": "rtb-0e3ba902a614a3b6f",
            "default_security_group_id": "sg-0216f4fc76f300365",
            "dhcp_options_id": "dopt-0a676fda13fadb75a",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e294875ae56cb4e0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e3ba902a614a3b6f",
            "owner_id": "912466608750",
            "tags": {
              "Name": "k8s-kubeadm"
            },
            "tags_all": {
              "Name": "k8s-kubeadm"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:912466608750:security-group-rule/sgr-041913f8c74cb690d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-041913f8c74cb690d",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-045fe3e9f6a01d3d3",
            "security_group_rule_id": "sgr-041913f8c74cb690d",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:912466608750:security-group-rule/sgr-0ef7c8eff3fb1ebb4",
            "cidr_ipv4": "77.139.204.87/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0ef7c8eff3fb1ebb4",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-045fe3e9f6a01d3d3",
            "security_group_rule_id": "sgr-0ef7c8eff3fb1ebb4",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.main",
            "aws_vpc.main",
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:912466608750:security-group-rule/sgr-02a25c336e8f495e0",
            "cidr_ipv4": "77.139.204.87/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": -1,
            "id": "sgr-02a25c336e8f495e0",
            "ip_protocol": "icmp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-045fe3e9f6a01d3d3",
            "security_group_rule_id": "sgr-02a25c336e8f495e0",
            "tags": null,
            "tags_all": {},
            "to_port": -1
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.main",
            "aws_vpc.main",
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "k8s_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:912466608750:security-group-rule/sgr-0d08dee923a30224a",
            "cidr_ipv4": "77.139.204.87/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 6443,
            "id": "sgr-0d08dee923a30224a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-045fe3e9f6a01d3d3",
            "security_group_rule_id": "sgr-0d08dee923a30224a",
            "tags": null,
            "tags_all": {},
            "to_port": 6443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.main",
            "aws_vpc.main",
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "pod_network_cidr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:912466608750:security-group-rule/sgr-0469f387a5616dd1c",
            "cidr_ipv4": "192.168.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0469f387a5616dd1c",
            "ip_protocol": "all",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-045fe3e9f6a01d3d3",
            "security_group_rule_id": "sgr-0469f387a5616dd1c",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:912466608750:security-group-rule/sgr-040c760bed5e58902",
            "cidr_ipv4": "77.139.204.87/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-040c760bed5e58902",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-045fe3e9f6a01d3d3",
            "security_group_rule_id": "sgr-040c760bed5e58902",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.main",
            "aws_vpc.main",
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "vpc_cidr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:il-central-1:912466608750:security-group-rule/sgr-0f118ceca28817ac0",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0f118ceca28817ac0",
            "ip_protocol": "all",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-045fe3e9f6a01d3d3",
            "security_group_rule_id": "sgr-0f118ceca28817ac0",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.main",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}